# network-audit-collector

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  collector-account.py  collector-linux.py  collector-network.py  dns_cve_2026-03-22.json  getting-started.md  install.ps1  install.sh  inv.json.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: install.md
examples/: grafana-dashboard.json  grafana-sample-data.csv  grafana-sample-data.json  linux-cve-output.json  linux-example-output.txt  linux-inv.csv  linux-inv.json  linux-output.csv  network-example-output.txt  network-inv.csv  network-inv.json  network-output.csv  windows-sysinfo-output.json
network_audit/: api.py  cli.py  config.py  display.py  export.py  maintenance.py  ssh.py
network_audit/commands/: account.py  linux.py  network.py  status.py  update.py  windows.py
tests/: test_parsers.py
