[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-audit"
version = "0.1.0"
description = "Network & Linux audit tools powered by network-audit.io"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=4.0,<5.0",
    "rich>=14.0,<15.0",
    "requests>=2.32,<3.0",
    "python-dotenv>=1.2,<2.0",
    "pywinrm>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = ["network_audit*"]

[project.scripts]
network-audit = "network_audit.cli:main"
